Fixed overflow-x bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: $primary-font;
   line-height: 1.5;
